<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android/apk/res-auto"
    android:id="@+id/movieCardView"
    android:layout_width="150dp"
    android:layout_height="200dp"
    android:layout_marginBottom="16dp"
    android:elevation="5dp"
    android:orientation="vertical"
    android:padding="4dp"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompactPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/movie_cover_poster"
            android:paddingBottom="4dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_poster"
            android:gravity="start"
            android:paddingBottom="4dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="4dp"
            android:text="@string/movie_title"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_name"
            android:gravity="start"
            android:paddingBottom="4dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="4dp"
            android:text="@string/movie_genre"
            android:textColor="#3c3f41" />

        <RatingBar
            android:id="@+id/movie_rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_genre"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:gravity="bottom"
            android:isIndicator="true"
            android:numStars="5" />

        <TextView
            android:id="@+id/movie_released_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/movie_genre"
            android:paddingRight="12dp"
            android:text="@string/released_year"
            android:textSize="12sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>