<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ViewMovie"
    tools:showIn="@layout/activity_view_movie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">


            <TextView
                android:id="@+id/summary_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:text="@string/summary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/movieDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:paddingLeft="20dp"
                android:paddingTop="18dp" />


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Suggested_movies"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="130dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/first_suggestion_poster"
                                android:layout_width="match_parent"
                                android:layout_height="90dp"
                                android:src="@color/colorAccent" />

                            <TextView
                                android:id="@+id/movie_suggested_title_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="130dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/second_suggestion_poster"
                                android:layout_width="match_parent"
                                android:layout_height="90dp"
                                android:src="@color/colorAccent" />

                            <TextView
                                android:id="@+id/movie_suggested_title_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="130dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/third_suggestion_poster"
                                android:layout_width="match_parent"
                                android:layout_height="90dp"
                                android:src="@color/colorAccent" />

                            <TextView
                                android:id="@+id/movie_suggested_title_3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="130dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/forth_suggestion_poster"
                                android:layout_width="match_parent"
                                android:layout_height="90dp"
                                android:src="@color/colorAccent" />

                            <TextView
                                android:id="@+id/movie_suggested_title_4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </HorizontalScrollView>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">


            <TextView
                android:id="@+id/stat_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:text="@string/movie_stats"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="40dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="125dp"

                        app:cardUseCompatPadding="true"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardUseCompactPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:src="@mipmap/ic_720p" />

                            <TextView
                                android:id="@+id/size_720p"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="4dp"
                                android:text="@string/size_720p" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/peers_720p"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="4dp"
                                    android:paddingTop="3dp"
                                    android:text="@string/peers_720p" />

                                <TextView
                                    android:id="@+id/seeds_720p"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="4dp"
                                    android:paddingTop="3dp"
                                    android:text="@string/seeds_720p" />
                            </LinearLayout>


                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="125dp"

                        app:cardUseCompatPadding="true"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardUseCompactPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:src="@mipmap/ic_1080p" />

                            <TextView
                                android:id="@+id/size_1080p"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="4dp"
                                android:text="@string/size_720p" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/peers_1080p"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="4dp"
                                    android:paddingTop="3dp"
                                    android:text="@string/peers_720p" />

                                <TextView
                                    android:id="@+id/seeds_1080p"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="4dp"
                                    android:paddingTop="3dp"
                                    android:text="@string/seeds_720p" />
                            </LinearLayout>


                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="125dp"

                        app:cardUseCompatPadding="true"
                        card_view:cardCornerRadius="5dp"
                        card_view:cardUseCompactPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:src="@mipmap/ic_3d" />

                            <TextView
                                android:id="@+id/size_3d"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="4dp"
                                android:text="@string/size_720p" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/peers_3d"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="4dp"
                                    android:paddingTop="3dp"
                                    android:text="@string/peers_720p" />

                                <TextView
                                    android:id="@+id/seeds_3d"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="4dp"
                                    android:paddingTop="3dp"
                                    android:text="@string/seeds_720p" />
                            </LinearLayout>


                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:id="@+id/movie_genre_view_movie"
                        android:text="@string/genres" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:id="@+id/rt_rating"
                        android:text="@string/rt_rating" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:id="@+id/imdb_rating"
                        android:text="@string/imdb_score" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:id="@+id/downloads"
                        android:text="@string/downloads" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:id="@+id/yt_url"
                        android:text="@string/youtube_trailer"
                        android:autoLink="web"
                        android:textColorLink="@android:color/holo_orange_dark" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
